# bbc-radio-schedules

./: .gitignore  LICENSE  Makefile  README.md  bbcradio_cli.py  dev_requirements.txt  pyproject.toml  requirements.txt  setup.py
.github/workflows/: codeql-analysis.yml  test.yml
bbcradio/: __init__.py  api.py  bbcradio.py  bbcradio_cli.py  cli.py  tests.py
bbcradio/fixtures/: schedule.html
tests/: test_api.py
tests/fixtures/: stations.html
