[tool.poetry]
name = "bbcradio"
version = "0.1.0"
description = "Unofficial API for BBC radio station schedules"
authors = ["Steven Maude <git@stevenmaude.co.uk>"]
license = "MIT"

readme = "README.md"

repository = "https://github.com/StevenMaude/bbc-radio-schedules"

keywords = ["bbc", "radio", "schedule"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3 :: Only",
]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.25.1"
lxml = "^4.6.5"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[tool.poetry.scripts]
bbcradio_cli = 'bbcradio.cli:main'

# https://github.com/pypa/pip/issues/8986
[build-system]
#requires = ["setuptools", "poetry-core>=1.0.0"]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
